set native select with custom button to opacity 0 instead of 0.0001. Note: I thought it was 0.0001 for a reason, but this checks out fine in WP7, WebOS, Android,iOS, Chrome, Safari, Firefox 4, Firefox 3.6, Opera Desktop & Mobile, IE 7 IE 8, IE 9, Blackberry 6. Sooo... that covers it. Fixes #1216

--- a/themes/default/jquery.mobile.forms.select.css
+++ b/themes/default/jquery.mobile.forms.select.css
@@ -6,7 +6,7 @@
 .ui-select { display: block; position: relative; }
 .ui-select select { position: absolute; left: -9999px; top: -9999px; }
 .ui-select .ui-btn { overflow: hidden; }
-.ui-select .ui-btn select { cursor: pointer; -webkit-appearance: button; left: 0; top:0; width: 100%; height: 100%; opacity: 0.001; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); }
+.ui-select .ui-btn select { cursor: pointer; -webkit-appearance: button; left: 0; top:0; width: 100%; height: 100%; opacity: 0; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter: alpha(opacity=0); }
 .ui-select .ui-btn select.ui-select-nativeonly { opacity: 1; }
 
 .ui-select .ui-btn-icon-right .ui-btn-inner { padding-right: 45px; } 
